@@ -1,3 +1,3 @@
-version = 1.7.9
+version = 1.7.10
 sonatypeUsername=please_set_in_home_dir_if_uploading_to_maven_central
 sonatypePassword=please_set_in_home_dir_if_uploading_to_maven_central
